# VerkleTreeRust

./: Cargo.toml  README.md  implementation-details.md  notes.md  test_data.txt
src/: data_reader.rs  lib.rs  main  main.rs  verkletree.rs
