[package]
name = "VerkleTreeRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vector-commit="0.1.0"
sha2="0.10.7"
digest="0.10"
ark-std = "0.3"
ark-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-ec = "0.3"
ark-ff = "0.3"
rand = "0.8"